# Shannon

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml  activate.sh  pixi.toml
.github/workflows/: pixi-build.yml
doxygen/: Doxyfile
scripts/: smoke.sh  validate_smoke.py
src/: digitise_hits.cpp  digitised_output_module.cpp  philox_rng.hpp  read_sim_file.cpp
src/detectors/: calorimeter.hpp  gaussian_smearer.hpp  straw_tubes.hpp  surround_tagger.hpp  timing_detector.hpp  upstream_tagger.hpp
tools/: make_test_input.cpp
workflows/: digitise_hits.jsonnet  smoke.jsonnet
